# snvi_repo

./: .gitignore  README.md
01a34951-9a86-413f-b9a7-362b2d44669a/samples/: predictive_samples.pt
01f64bed-bbd7-4bbd-b6ef-06dc6721ce2c/samples/: predictive_samples.pt
01f76110-ff9b-460d-9d59-2fc10ab627ab/samples/: predictive_samples.pt  samples.pt
0f18053f-c66f-447b-ba7b-aa13a407f343/samples/: predictive_samples.pt
0f38a9e4-020d-4c33-88bd-1abeb9342872/samples/: samples.pt
pck1/: setup.py
pck2/: setup.py
pck3/: setup.cfg  setup.py
updates/: README.md
updates/sbivibm/: env.yml  setup.cfg  setup.py
updates/sbivibm/figures/final_figures/: fKL_refined_posterior_compute_predictives.py  pyloric_figures.ipynb  pyloric_figures_94valid.ipynb  pyloric_figures_fKL_refined.ipynb  refined_posterior_compute_predictives.py  run_script2.sh
updates/sbivibm/sbivibm/algorithms/snlpe/: spa.py
updates/sbivibm/sbivibm/plotting/: __init__.py  benchmark_plots.py  benchmark_plots.py.save
updates/sbivibm/sbivibm/runs/: benchmark_snlmcmc.py  benchmark_snlvi.py  benchmark_snrmcmc.py  benchmark_snrvi.py  filter.py
updates/sbivibm/sbivibm/tasks/pyloric_stg/: pyloric_stg.py  run_one.sh  run_sims_for_parameters.py  seed_log.txt
updates/sbivibm/sbivibm/tasks/pyloric_stg/files/num_observation_1/: observation.csv  true_parameters.csv
updates/sbivibm/sbivibm/tasks/pyloric_stg/files/num_observation_2/: observation.csv  true_parameters.csv
updates/sbivibm/sbivibm/tasks/pyloric_stg/files/num_observation_3/: observation_seed.csv
updates/sbivibm/sbivibm/utils/: utils_tasks.py
(+12295 files in other folders)
