[metadata]
name = sbivibm
version = 0.1.0.dev
author = Manuel Gloeckler
author-email = manuel.gloeckler@student.uni-tuebingen.de
summary = Benchmark scripts for testing VI algorithms in SBI
license = LICENSE
description-file = README.md

[options]
install_requires =
    sbi
    matplotlib
    seaborn
    hydra-core
    hydra-submitit-launcher
    pyloric

dependency_links = ['https://github.com/mackelab/pyloric.git']

scripts=
    scripts/sbivibm
    scripts/sbiviplot
packages=
    sbivibm